<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="8dp"
    android:paddingTop="5dp">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageThumbAdat"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/tombol_ruwa_jurai" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignWithParentIfMissing="false"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/imageThumbAdat"
                    android:paddingLeft="10dp"
                    android:text="@string/adat_istiadat"
                    android:textSize="25dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <com.devsmart.android.ui.HorizontalListView
                android:id="@+id/listviewAdat"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:background="#ddd" />

            <RelativeLayout
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageThumbKesenian"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/tombol_kesenian" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignWithParentIfMissing="false"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/imageThumbKesenian"
                    android:paddingLeft="10dp"
                    android:text="@string/Kesenian"
                    android:textSize="25dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <com.devsmart.android.ui.HorizontalListView
                android:id="@+id/listViewKesenian"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:background="#ddd" />

            <RelativeLayout
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageThumbMakanan"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/tombol_kesenian" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignWithParentIfMissing="false"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/imageThumbMakanan"
                    android:paddingLeft="10dp"
                    android:text="@string/makanan"
                    android:textSize="25dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <com.devsmart.android.ui.HorizontalListView
                android:id="@+id/listViewMakanan"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:background="#ddd" />

            <RelativeLayout
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageThumbBahasa"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/tombol_bahasa" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignWithParentIfMissing="false"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/imageThumbBahasa"
                    android:paddingLeft="10dp"
                    android:text="@string/bahasa"
                    android:textSize="25dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <com.devsmart.android.ui.HorizontalListView
                android:id="@+id/listViewBahasa"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="#ddd" />

            <RelativeLayout
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageThumbAksara"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/tombol_aksara" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignWithParentIfMissing="false"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/imageThumbAksara"
                    android:paddingLeft="10dp"
                    android:text="@string/aksara"
                    android:textSize="25dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <com.devsmart.android.ui.HorizontalListView
                android:id="@+id/listViewAksara"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#ddd" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>